# Proj_RECHOP

./: README.md  solution.txt  solution2.txt  toDoList.md  totalCost.txt
Codes/: corps_projet.jl  instance.jl
SujetProjet20202021/build-code_C++-Desktop_Qt_5_13_1_clang_64bit-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  dispatch-solution-checker.cbp
SujetProjet20202021/build-code_C++-Desktop_Qt_5_13_1_clang_64bit-Release/: CMakeCache.txt  Makefile  cmake_install.cmake  dispatch-solution-checker.cbp
SujetProjet20202021/code_C++/: CMakeLists.txt  Dispatch.cpp  Fournisseur.cpp  Instance.cpp  Instance.h  Solution.h  Usine.cpp  Usine.h  out.txt
SujetProjet20202021/code_Julia/: Projet REOP.html  Projet REOP.ipynb  graphe.jl
SujetProjet20202021/sujet/: meta_solution.txt
Work/: Clusters_par_region.jl  Solution_optimale_routes.jl  Test_solution.jl  clusters.jl  corps_projet.jl  dispatch.jl  flot.jl  flow.jl  format.jl  main.jl  plne.jl  solution.txt  solution2.txt  totalCost.txt  upgrade.jl
code_C++/: Fournisseur.h  ReadMe.md  Route.cpp  Route.h  Solution.cpp
solutions/: solution.txt  solution2.txt
sujet/: petite.txt
